--- a/plugin.xml
+++ b/plugin.xml
@@ -40,6 +40,7 @@
 	
     <!-- ANDROID CONFIGURATION -->
     <platform name="android">
+	    <framework src="com.android.support:support-v4:26.0.1+" value="gradle" />
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
 			<activity android:exported="true" android:name="com.gae.scaffolder.plugin.FCMPluginActivity" android:launchMode="singleTop">
 				<intent-filter>   
